Purge examples
